 - Fixed bug with helper delete using MAXNICK instead of correct buffer size (M)
 - Updated conf buffers to use CONFBUFSIZE (M)
 - Fix free() position in Helpers_init (M)
 - Nick flood code tidied up and moved to floodcheck.c (M)
 - Create #define DEFAULT_VERSION_RESPONSE so users can more easily change default version 
   response of onjoin bots - should this be a config option? (M)
 - Add hidden host support but ircd support required in core (M)
 - Updated code to use new 2.5.11 ircd updates - SecureServ is now ircd independent (M)
 - Generic scaning functions created for use by SecureServ to avoid repeating code (M)
 - Scanning and related code move to scan.c (M)
 - Generic get bot and get channel functions created for onjoin bot use (M)
 - Tidy up of some code to remove gotos and reduce repeated code (M)
 - Tidy up config code and fix bug with onjoin bot initialisation freeing invalid pointer (M)
 - exempt related code move to exempt.c (M)
 - Tidy up bot_msg for future port to core function (M)
 - Fix bot CTCP version replies; they should not come from SecureServ! (M)
 - Fix missing fizzer status in SET LIST (M)

1.0 - Fish (F) and Mark (M) - 22 Aug, 2003
 - Fixed a problem with users signing off while NeoStats was still booting. (F)
 - Fixed a typo in help set (BugID #42) (F)
 - Fixed a problem with Exclude lists not being saved after a delete (BugID #41) (F)
 - HTTP agent wasn't reporting correct version to website (F)
 - Update segv code (M/F)
 - Cleaned up help text and reformatted help to match the rest of NeoStats (M)
 - Cleaned up old includes of <fnmatch.h> (M)
 - Changed to use new module export API (M)
 - Added missing NULL checks for finduser results to avoid referencing NULL pointers (M)
 - Renamed output module to secureserv to fix load/unload issues (M)
 - Don't do onjoin checks for channels monitored via a monbot (F)
 - Don't lock a channel when its already locked (BugID: 45) (F)
 - Fixed missing fclose call in load_dat (M)